added desktop styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <div class="picture-wrapper">
 <p id="quote" class="quote" align="center"></p>
 <img id="picture" src="img/blackboard.png"/>
+<img id="mobilePic" src="img/blackboard-mobile.png"/>
 </div>
 
 <div class="button-wrapper">
